<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/wallpaperd"
    android:layout_height="match_parent"
    tools:context=".Signin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_centerInParent="true">


        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:id="@+id/editphone"
            android:textSize="34sp"
            android:inputType="phone"
            app:met_maxCharacters="11"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true"
            app:met_floatingLabel="highlight"
            android:textColor="@android:color/white"
            app:met_baseColor="@android:color/white"
            android:textColorHint="@android:color/white"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:id="@+id/editpass"
            android:textSize="34sp"
            android:inputType="textPassword"
            app:met_maxCharacters="11"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true"
            app:met_floatingLabel="highlight"
            android:textColor="@android:color/white"
            app:met_baseColor="@android:color/white"
            android:textColorHint="@android:color/white"/>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:weightSum="2">

           <com.rey.material.widget.CheckBox
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               style="@style/Material.Drawable.CheckBox"
               android:text="Remember Me"
               android:textColor="@android:color/white"
               android:id="@+id/ckbRemember"
               app:cbd_strokeColor="@android:color/white"
               app:cbd_tickColor="@color/colorPrimaryDark"
               android:gravity="center_vertical"
               />

           <TextView
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:id="@+id/fgtPassword"
               android:textColor="@android:color/white"
               android:text="Forget Password"/>
       </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/signin"
        android:textAllCaps="false"
        android:background="@color/btnactive"
        android:textColor="@android:color/white"
        android:shadowColor="@android:color/black"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp"
        android:id="@+id/btnsignin"
        android:layout_height="wrap_content" />
</RelativeLayout>