<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    tools:context=".Signup">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/profile_image"
        android:layout_above="@+id/linearLayout"
        android:src="@drawable/applozic_ic_person_white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="8dp"
        android:id="@+id/linearLayout"
        android:background="@drawable/input"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="76dp"
        android:orientation="vertical">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/editphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="24sp"
            app:met_baseColor="@android:color/black"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            app:met_primaryColor="@android:color/black"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/editname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Name"
            android:inputType="textPersonName"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="24sp"
            app:met_baseColor="@android:color/black"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            app:met_primaryColor="@android:color/black"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/editmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dvf"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="24sp"
            app:met_baseColor="@android:color/black"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            app:met_primaryColor="@android:color/black"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/editstatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Status"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="24sp"
            app:met_baseColor="@android:color/black"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            app:met_primaryColor="@android:color/black"
            app:met_singleLineEllipsis="true" />

    </LinearLayout>

    <Button
        android:id="@+id/btnsignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="18dp"
        android:background="@color/colorPrimaryDark"
        android:shadowColor="@android:color/black"
        android:text="@string/sdjbsdfjk"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />
</RelativeLayout>